[FIX] web_responsive: Change z-indexes * Rebalance z-indexes to fix overlay issue while still providing notification support

--- a/web_responsive/static/src/less/app_drawer.less
+++ b/web_responsive/static/src/less/app_drawer.less
@@ -11,10 +11,10 @@
     border-radius: @border-radius-base;
     .box-shadow(0 6px 12px rgba(0, 0, 0, .175));
     background-clip: padding-box;
-    z-index: 2000;
+    z-index: 1000;
     
     .o_tooltip {
-        z-index: 2051;
+        z-index: 1051;
     }
     
     .oe_logo {
